# voxel-raytracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm  renderer
src/: Common.hpp  common.hpp  static_renderer.cpp  static_renderer.hpp  voxel-raytracer.cpp  voxel-raytracer.hpp
src/classes/: AABB.hpp  Colour.hpp  Intersection.hpp  Interval.hpp  Material.hpp  Ray.hpp  Vec3.hpp  Voxel.hpp  VoxelGrid.hpp  aabb.cpp  aabb.hpp  colour.cpp  colour.hpp  intersection.hpp  interval.hpp  material.hpp  ray.cpp  ray.hpp  vec3.cpp  vec3.hpp  voxel.hpp  voxel_grid.hpp
